# Milo-CMS

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-506fc05d88d0c63ee06b8ef9a31d48755d1ed27ea9a44e0591ea57ff5f806ffb.json  query-7cc2537a831ff6ca22905b92e226eff4597de301cc32d2a1976c0d8a2b61f3df.json  query-9e773607844b6552a3de45109221ace4b2dcfdaa637d5dfb5d2f525e9159b183.json  query-a2b96563bfcb2b038383501ba3321d605519b62d8e83e66a439bde837ed22252.json  query-c03cbf798ce082c09e80fb373d84c893274c885981e6f27c6187c5670ee8e174.json
db/pg/: collection_table.sql  field_tables.sql
db/pg/queries/: test.sql
kaiser-admin-client/: package.json  pnpm-lock.yaml
kaiser-admin-client/src/: App.tsx  enums.ts  main.tsx  theme.tsx
queries/postgres/: fields_by_collection.sql  get_fields.sql  insert_collection.sql
src/: application.rs  domain.rs  infrastructure.rs  main.rs  presentation.rs
src/application/: collection_logic.rs  field_logic.rs  traits.rs
src/application/traits/: collection_trait.rs  field_trait.rs  queryable.rs
src/domain/: enums.rs  models.rs
src/domain/enums/: drivers.rs  items.rs
src/domain/models/: collection.rs  field.rs
src/infrastructure/: enums.rs  mysql.rs
src/infrastructure/enums/: data_access.rs
src/infrastructure/mysql/: access.rs
src/infrastructure/postgres/: access.rs
src/presentation/: collection.rs  collection_endpoints.rs  field_endpoints.rs
