[package]
name = "milo_cms"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
sqlx = { version = "0.8.0", features = [
    "runtime-async-std",
    "tls-native-tls",
    "any",
    "postgres",
    "mysql",
    "sqlite",
] }
dotenv = "0.15"
